# gnome-chemistry-utils

./: .cvsignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.incl  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  gchem3d-viewer.desktop.in  gchemutils.keys.in  gchemutils.mime  gchemutils.schemas.in  gchemutils.xml.in  gcu-0.3.pc.in  gcu-0.5.pc.in  gcu-unstable.pc.in  gcu.pc.in  gendocs
chem3d/: Makefile.am  bonobo-control.cc  gchem3d-viewer.c  gchem3d.server.in.in  gtkchem3dviewer.cc  gtkchem3dviewer.h
chemistry/: Makefile.am  atom.cc  atom.h  bond.cc  bond.h  chemistry.cc  chemistry.h  element.cc  element.h  elements.xml.in  matrix.cc  matrix.h  object.cc  object.h  xml-utils.cc  xml-utils.h
crystalviewer/: Makefile.am  crystalatom.cc  crystalatom.h  crystalbond.cc  crystalbond.h  crystalcleavage.cc  crystalcleavage.h  crystaldoc.cc  crystaldoc.h  crystalline.cc  crystalline.h  crystalview.cc  crystalview.h  gtkcrystalviewer.cc  gtkcrystalviewer.h
docs/man/: .cvsignore  Makefile.am  gchem3d-viewer-unstable.1  gchem3d-viewer-unstable.1.xml  gchem3d-viewer.1  gchem3d-viewer.1.xml  gchem3d.1  gchem3d.1.in  gchem3d.1.xml  gchemcalc-unstable.1  gchemcalc-unstable.1.xml  gchemcalc.1  gchemcalc.1.in  gchemcalc.1.xml  gchempaint-unstable.1  gchempaint-unstable.1.xml  gchempaint.1  gchempaint.1.in  gchempaint.1.xml  gchemtable-unstable.1  gchemtable-unstable.1.xml  gchemtable.1  gchemtable.1.in  gchemtable.1.xml  gcrystal-unstable.1  gcrystal-unstable.1.xml  gcrystal.1  gcrystal.1.in  gcrystal.1.xml  gcu_entities.dtd.in  gcu_man_legal.xml  gspectrum-unstable.1  gspectrum-unstable.1.xml  gspectrum.1  gspectrum.1.in  gspectrum.1.xml  libgcu-unstable.3  libgcu-unstable.3.xml  libgcu.3  libgcu.3.xml
docs/reference/: .cvsignore  Doxyfile  Doxyfile.in  Makefile.am
gcu/: Makefile.am  application.cc  application.h  atom.cc  atom.h  bond.cc  bond.h  bonobo-control.cc  chem3ddoc.cc  chem3ddoc.h  chemistry.cc  chemistry.h  crystalatom.cc  crystalatom.h  crystalbond.cc  crystalbond.h  crystalcleavage.cc  crystalcleavage.h  crystaldoc.cc  crystaldoc.h  crystalline.cc  crystalline.h  crystalview.cc  crystalview.h  dialog-owner.cc  dialog-owner.h  dialog.cc  dialog.h  document.cc  document.h  element.cc  element.h  elements.xml.in  filechooser.cc  filechooser.h  formula.cc  formula.h  gchem3d-0.3.server.in.in  gchem3d-viewer.c  gchem3d-viewer.desktop.in  (+25 more)
gnumeric/: Makefile.am  functions.cc  plugin.xml.in  plugin.xml.in.in
goffice/: .cvsignore  Makefile.am  gchemutils-priv.h  gchemutils.cc  gchemutils.h  gogchem3dapp.cc  gogchem3dapp.h  gogchem3dwin.cc  gogchem3dwin.h  gogcpapp.cc  gogcpapp.h  gogcpwin.cc  gogcpwin.h  gogcrystalapp.cc  gogcrystalapp.h  gogcrystalwin.cc  gogcrystalwin.h  gogcuapp.cc  gogcuapp.h  plugin.xml.in
gtkperiodic/: Makefile.am  gtkperiodic.c  gtkperiodic.h
libs/canvas/: Makefile.am  canvas.cc  client.h  gcp-canvas-bpath.c  gcp-canvas-bpath.h  gcp-canvas-group.c  gcp-canvas-group.h  gcp-canvas-i18n.h  gcp-canvas-line.c  gcp-canvas-line.h  gcp-canvas-pango.c  gcp-canvas-pango.h  gcp-canvas-polygon.c  gcp-canvas-polygon.h  gcp-canvas-rect-ellipse.c  gcp-canvas-rect-ellipse.h  gcp-canvas-shape.c  gcp-canvas-shape.h  gcp-canvas-text.c  gcp-canvas-text.h  gnome-print-pango.c  gnome-print-pango.h  gprintable.c  gprintable.h  item-client.cc  item-client.h  item.cc  line.h  pango-layout-to-svg.c  rectangle.cc  text.h
libs/gccv/: Makefile.am  arc.cc  arc.h  arrow.cc  arrow.h  bezier-arrow.cc  bezier-arrow.h  brackets.cc  brackets.h  canvas.cc  canvas.h  cc-rich-text.h  circle.cc  circle.h  client.cc  client.h  equation.cc  equation.h  fill-item.cc  fill-item.h  group.cc  group.h  hash.cc  hash.h  item-client.cc  item-client.h  item.cc  item.h  leaf.cc  leaf.h  lemniscate.cc  lemniscate.h  line-item.cc  line-item.h  line.cc  line.h  path.cc  path.h  poly-line.cc  poly-line.h  (+15 more)
libs/gcp/: .cvsignore  Hposdlg.cc  Hposdlg.h  Makefile.am  about.cc  about.h  application.cc  application.h  arrow.cc  arrow.h  atom-residue.cc  atom-residue.h  atom.cc  atom.h  bond.cc  bond.h  brackets.cc  brackets.h  chain.cc  chain.h  cycle.cc  cycle.h  delocalized-bond.cc  delocalized-bond.h  docprop.cc  docprop.h  document.cc  document.h  electron.cc  electron.h  fontsel.cc  fontsel.h  fragment-atom.cc  fragment-atom.h  fragment-residue.cc  fragment-residue.h  fragment.cc  fragment.h  mechanism-arrow.cc  mechanism-arrow.h  (+79 more)
libs/gcr/: Makefile.am  application.cc  application.h  atom.cc  atom.h  atomsdlg.cc  atomsdlg.h  bond.cc  bond.h  celldlg.cc  celldlg.h  cleavage.cc  cleavage.h  cleavagesdlg.cc  cleavagesdlg.h  docprop.cc  docprop.h  document.cc  document.h  gcrcrystalviewer.cc  gcrcrystalviewer.h  globals.h  grid.cc  grid.h  line.cc  line.h  linesdlg.cc  linesdlg.h  prefs.cc  prefs.h  sizedlg.cc  sizedlg.h  view-settings.cc  view-settings.h  view.cc  view.h  window.cc  window.h
libs/gcu/: Makefile.am  application.cc  application.h  atom.cc  atom.h  bond.cc  bond.h  bondable.cc  bondable.h  chain.cc  chain.h  chem3ddoc.cc  chem3ddoc.h  chemistry.cc  chemistry.h  cmd-context-gtk.cc  cmd-context-gtk.h  cmd-context.cc  cmd-context.h  crystalatom.cc  crystalatom.h  crystalbond.cc  crystalbond.h  crystalcleavage.cc  crystalcleavage.h  cycle.cc  (+95 more)
mozilla-plugin/: .cvsignore  Makefile.am  chem-viewer.cc  moz-plugin.c
pixmaps/: Makefile.am
programs/: Makefile.am  gchem3d-viewer-unstable.desktop.in  gchem3d-viewer.c  gchem3d-viewer.desktop.in  gchemcalc-unstable.desktop.in  gchemcalc.cc  gchemtable-app.cc  gchemtable-app.h  gchemtable-curve.cc  gchemtable-curve.h  gchemtable-elt.cc  gchemtable-elt.h  gchemtable-main.cc  gchemtable-unstable.desktop.in
schemas/: Makefile.am  org.gnome.gchemutils.crystal.gschema.xml.in.in  org.gnome.gchemutils.gschema.xml.in.in  org.gnome.gchemutils.paint.gschema.xml.in.in
tests/: Makefile.am  bonobo-control-test.c  methane.xyz  nickel.gcrystal  testbabelserver.c  testbonobocontrol.c  testgcrcrystalviewer.c  testgcuchem3dviewer.c  testgcucrystalviewer.c  testgcuperiodic.c  testgtkchem3dviewer.c  testgtkcrystalviewer.c  testgtkperiodic.c
(+515 files in other folders)
